# textlesslib

./: .gitignore  CHANGELOG.md  CITATION.bib  CONTRIBUTING.md  README.md  requirements.txt  setup.cfg  setup.py
examples/: resynthesis_and_continuation.ipynb
examples/expresso/: README.md  classify_audio.py  read_transcriptions.txt
examples/expresso/dataset/: README.md
examples/expresso/dataset/processing/: README.md  convert_to_16k.py  create_short_segments_dataset.py  expresso_VAD_segments.txt  perform_operations.py
examples/expresso/dataset/processing/expresso_splits/: README  dev.txt  test.txt  train.txt
examples/gslm/: README.md  sample.py  sampler.py
examples/resynthesis/: README.md  resynth.py
examples/speaker_probing/: README.md  probes.py  train.py
examples/twist/: README.md  speech_lm.py  twist_generation.py
tests/: test_checkpoint_manager.py  test_model_handling.py  test_quantized_dataset.py
textless/: __init__.py
textless/checkpoint_manager/: __init__.py  manager.py
textless/data/: collater_utils.py  cpc_feature_reader.py  f0_preprocess.py  hubert_feature_reader.py  kmeans_quantizer.py  quantized_datasets.py  speech_encoder.py
textless/vocoders/hifigan/: generator.py  resblock.py  vocoder.py
textless/vocoders/tacotron2/: __init__.py  audio_processing.py  cleaners.py  cmudict.py  glow.py  layers.py  model.py  numbers.py  symbols.py  text.py  tts_data.py  utils.py  vocoder.py  waveglow_denoiser.py
tools/distributed_transcribe/: README.md  data_handler.py  distributed.py  local.sh  single.sh  slurm.sbatch  transcribe.py
